Dockerized/kubernetes/00_namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dockerized
spec: {}
status: {}
