Dockerized/kubernetes/06-phpmyadmin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    labels:
        app: phpmyadmin
    name: phpmyadmin
    namespace: dockerized
spec:
    replicas: 1
    selector:
        matchLabels:
            app: phpmyadmin
    strategy: {}
    template:
        metadata:
            labels:
                app: phpmyadmin
        spec:
            containers:
                - image: phpmyadmin/phpmyadmin:latest
                  name: phpmyadmin
                  resources:
                      requests:
                          memory: '256Mi'
                          cpu: '250m'
                      limits:
                          memory: '512Mi'
                          cpu: '500m'
status: {}
