Dockerized/kubernetes/08-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    labels:
        app: app
    name: app
    namespace: dockerized
spec:
    replicas: 1
    selector:
        matchLabels:
            app: app
    strategy: {}
    template:
        metadata:
            labels:
                app: app
        spec:
            containers:
                - image: python-app
                  imagePullPolicy: Never
                  name: python-app
                  readinessProbe:
                      httpGet:
                          path: /_stcore/health
                          port: 8501
                      initialDelaySeconds: 20
                      periodSeconds: 40
                      timeoutSeconds: 30
                      failureThreshold: 3
                  livenessProbe:
                      httpGet:
                          path: /_stcore/health
                          port: 8501
                      initialDelaySeconds: 60
                      periodSeconds: 60
                      timeoutSeconds: 30
                      failureThreshold: 3
                  resources:
                      requests:
                          cpu: '0.5'
                          memory: '750Mi'
                      limits:
                          cpu: '0.5'
                          memory: '1Gi'
status: {}
