Dockerized/kubernetes/07-phpmyadmin-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: phpmyadmin
  name: phpmyadmin
  namespace: dockerized
spec:
  ports:
  - name: 80-80
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: phpmyadmin
  type: LoadBalancer
status:
  loadBalancer: {}
