Dockerized/kubernetes/09-app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: app
  name: app
  namespace: dockerized
spec:
  ports:
  - name: 8501-8501
    port: 8501
    protocol: TCP
    targetPort: 8501
  selector:
    app: app
  type: LoadBalancer
status:
  loadBalancer: {}
