Dockerized/kubernetes/10.5-websocket.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: websocket-app
  namespace: dockerized
  labels:
    app: websocket-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: websocket-app
  template:
    metadata:
      labels:
        app: websocket-app
    spec:
      containers:
        - name: websocket-app
          image: websocket-app:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8765
          resources:
            requests:
              memory: "384Mi"
              cpu: "200m"
            limits:
              memory: "384Mi"
              cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
  name: websocket-app
  namespace: dockerized
  labels:
    app: websocket-app
spec:
  type: LoadBalancer
  selector:
    app: websocket-app
  ports:
    - name: http
      protocol: TCP
      port: 8765
      targetPort: 8765
