Dockerized/kubernetes/11-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: dockerized-ingress
    namespace: dockerized
    annotations:
        nginx.ingress.kubernetes.io/rewrite-target: /
        nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
        nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
    rules:
        - host: python.app
          http:
              paths:
                  - backend:
                        service:
                            name: app
                            port:
                                number: 8501
                    path: /
                    pathType: Prefix
        - host: pma.python.app
          http:
              paths:
                  - backend:
                        service:
                            name: phpmyadmin
                            port:
                                number: 80
                    path: /
                    pathType: Prefix
status:
    loadBalancer: {}
